src/styles/global.css
@import "tailwindcss";

:root {
  --main-accent-color: #2bf0c2;
  --border-color: var(--yellow);
  --mint-green: #2bf0c2;
  --yellow: yellow;
  --pink: hotpink;
  --blue: #21b2e3;
  font-size: 24px;
  --yellowalpha: #ffff0088;
  --astro-code-color-text: white;
  --astro-code-color-background: rgb(28 25 23);
  --astro-code-token-constant: var(--mint-green);
  --astro-code-token-string: var(--pink);
  --astro-code-token-comment: var(--pink);
  --astro-code-token-keyword: var(--blue);
  --astro-code-token-parameter: var(--blue);
  --astro-code-token-function: var(--pink);
  --astro-code-token-string-expression: var(--yellow);
  --astro-code-token-punctuation: var(--blue);
  --astro-code-token-link: var(--blue);
}

@font-face {
  font-family: "Alfa Slab One";
  src: local("Alfa Slab One"),
    url("/fonts/AlfaSlabOne-Regular.ttf") format("truetype");
}

::selection {
  background-color: var(--main-accent-color);
  color: black;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Alfa Slab One", cursive;
  font-size: 32px;
  color: var(--yellow);
  margin-bottom: 2rem;
  letter-spacing: 2px;
  paint-order: stroke fill;  
  text-shadow: 0.2em 0.2em 0.2em var(--astro-code-color-background);
  text-wrap: balance;
}

.slab {
  font-family: "Alfa Slab One", cursive;
  letter-spacing: 2px;
}

body {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(5, max-content);
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  line-height: 2rem !important;
}

p {
  margin-bottom: 1rem;
}

mark {
  background-color: var(--pink);
  padding: 0.25rem;
}

a,
a:visited {
  color: var(--main-accent-color) !important;
  text-decoration: underline solid !important;
  text-decoration-skip: edges;
}

a:hover {
  color: var(--main-accent-color);
  text-decoration: underline wavy !important;
}

header {
  grid-area: 1 / 1 / 2 / 2;
  margin-top: 2rem;
  font-family: "Alfa Slab One", cursive;
  font-size: 1rem;
}

main {
  grid-area: 2 / 1 / 3 / 2;
  padding-bottom: 1.5rem;
}

footer {
  grid-area: 5 / 1 / 6 / 2;
  margin-bottom: 1rem;
    padding-top: 1rem;
  border-top: 0.25rem solid var(--border-color);
}

@media (min-width: 480px) {
  body {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: max-content;
    grid-column-gap: 2rem;
    grid-row-gap: 2rem;
  }

  header {
    grid-area: 1 / 1 / 2 / 5;
  }

  main {
    grid-area: 2 / 1 / 3 / 5;
  }

#posts {
  grid-area: 3 / 1 / 3 / 3;
  grid-template-columns: 2fr;
  }

  #notes {
    grid-area: 3 / 3 / 4 / 5;
  }

  footer {
    grid-area: 4 / 1 / 5 / 5;
  }
}

.astro-code {
  padding: 1rem;
  border-radius: 1rem;
  margin: 1rem 0;
  border-color: var(--yellowalpha);
  border-width: 1px;
}

p {
  @apply pb-5;
}

:not(pre) > code {
  background-color: var(--astro-code-color-background);
  padding: 0.25rem;
  border-radius: 0.5rem;
  display: inline-block;
  line-height: 1rem !important;
}

p:has(> span[data-filename]) {
  margin: 0 !important;
  padding-bottom: 0 !important;
}

span[data-filename] > code {
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
  border-left: none !important;
  border-right: none !important;
  border-top: none !important;
  padding-bottom: 0.25rem !important;
}

span[data-filename] > code::before {
  content: url("/img/file.svg");
  padding-right: 0.5rem;
}

p:has(> span[data-filename]) + pre {
  margin-top: 0 !important;
  border-top-left-radius: 0 !important;
}

li {
  list-style-type: circle;
}

li::marker {
  color: hotpink;
}

ul ul {
  margin-left: 2rem;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

ul ul li {
  list-style-type: disc;
}

ul ul ul li {
  list-style-type: square;
}

a > #avatar:hover {
  transform: rotate(360deg);
  box-shadow: 0.1em 0.1em 0.5em 0.1em var(--yellow);
}

details > summary {
  color: var(--mint-green);
  text-decoration: underline;
  cursor: pointer;
  width: fit-content;
  @apply m-3 ml-0;
}

.emoji-color {
  color: transparent;
  text-shadow: 0 0 0 hotpink;
}

article img, article video, article iframe {
  object-fit: cover;
  width: 100%;
  border-radius: 1.5rem;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

article video, article iframe {
  aspect-ratio: 16 / 9;
  height: auto;
}

article footer {
  margin: 0px;
  padding: 0px;
  border: 0px;
}

article footer img {
  object-fit: none;
  width: fit-content;
}

